<resources>
    <string name="app_name">Alenin Test City Guide</string>
    <string-array name="menu_names">
        <item>Новости</item>
        <item>Настройки</item>
        <item>О программе</item>
    </string-array>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_news_fragment">Hello news fragment</string>
    <string name="hello_settings_fragment">Hello setting fragment</string>
    <string name="hello_about_fragment">Hello about fragment</string>
    <string name="important_news">Важная новость!</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>
    <string name="load_finished">Загрузка завершена!</string>
    <string name="author">Аленин Денис</string>
    <string name="about_ok">OK</string>
    <string name="auto_update">Автообновление</string>
    <string name="auto_update_min">мин.</string>
    <string name="auto_update_on">Автообновление выкл.</string>
    <string name="auto_notifications_on">Оповещения вкл.</string>
</resources>
