<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.den.alenintestcityguide.fragment.SettingsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <!-- TODO: Update blank fragment layout -->
                <TextView
                    android:id="@+id/settings_autoupdate"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/settings_top"
                    android:text="@string/auto_update"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/settings_autoUpdateTime"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="1"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/settings_autoupdate_min"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/settings_top"
                    android:text="@string/auto_update_min"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/settings_autoupdate_enable_text"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/settings_top"
                    android:text="@string/auto_update_on"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/settings_autoupdate_enable_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/settings_top"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/settings_notification_enable_text"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/settings_top"
                    android:text="@string/auto_notifications_on"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/settings_notification_enable_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/settings_top"
                    android:layout_weight="1" />

            </LinearLayout>

            <Button
                android:id="@+id/settings_autoupdate_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:text="@string/about_ok" />
        </LinearLayout>
    </FrameLayout>
</layout>